Fixed Scrollbars and menu size

--- a/Visualization_of_Java_Code/src/main/java/visualization/style.css
+++ b/Visualization_of_Java_Code/src/main/java/visualization/style.css
@@ -1,26 +1,47 @@
 #graphContainer{ /* #<ID> := document.getElementById(<ID>) -- style for this element*/
     width: 75vw; /* := 100% of max screen width */
-    height: 100vh;
+    height: calc(100vh - 1vw);
     overflow-y: scroll;
     overflow-x: scroll;
     min-width: 75vw;
     max-width: 75vw;
-    min-height: 100vh; 
-    max-height: 100vh;
-    float:left; 
+    min-height: calc(100vh - 1vw); 
+    max-height: calc(100vh - 1vw);
+    float:left;
+    scrollbar-width: 1vw; 
 }
 #optionsContainer{
-    width: 25vw; 
-    height: 100vh;
+    width: 23vw; 
+    height: calc(100vh - 1vw);
     overflow-y: scroll;
+    scrollbar-width: 1vw;
     overflow-x: hidden;
-    min-width: 25vw;
-    max-width: 25vw;
-    min-height: 100vh; 
-    max-height: 100vh;
+    /* min-width: 25vw;
+    max-width: 25vw; */
+    min-height: calc(100vh - 1vw); 
+    max-height: calc(100vh - 1vw);
     float:right; 
+}
+#optionsContainer{
+    font-size: 0.7rem;
+}
+#optionsContainer > div{
+    margin: 0.75vh 0
+}
+@media(min-width: 768px){
+    #optionsContainer{
+        font-size: 0.95rem;
+    }
+}
+@media(min-width: 992px){
+    #optionsContainer{
+        font-size: 1.095rem;
+    }
 }
 body{
     height: 100vh;
     width: 100vw;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
+/* //1432 */
